# market_connectivity

./: CMakeLists.txt  README.md  conanfile.txt
client/: CMakeLists.txt
client/src/: main.cpp  tcp_client.cpp  tcp_client.h
common/: json_message_converter.cpp  json_message_converter.h  messages.h
integration_tests/: 1_2_tokens.txt  20_tokens.txt  only_odd_tokens.txt  reverse_20_tokens.txt  test.sh
server/: CMakeLists.txt
server/src/: MultiQueueProcessor.h  client_connection.cpp  client_connection.h  consumer.cpp  consumer.h  consumer_manager.cpp  consumer_manager.h  main.cpp  tcp_server.cpp  tcp_server.h
tests/: CMakeLists.txt  test_consumer_manager.cpp  test_json_message_converter.cpp
